{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 29,
  "lineage": "c9e4fcc9-a653-624f-844b-092353f7c61a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:internet-gateway/igw-0f1e7feef9864cfd0",
            "id": "igw-0f1e7feef9864cfd0",
            "owner_id": "091974775195",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudops-igw",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-igw",
              "Project": "cloudops"
            },
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "igw-0f1e7feef9864cfd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cloudops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:loadbalancer/app/cloudops-alb/b5b96e2970bbab94",
            "arn_suffix": "app/cloudops-alb/b5b96e2970bbab94",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudops-alb-2011123257.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091974775195:loadbalancer/app/cloudops-alb/b5b96e2970bbab94",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudops-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0162efbc39dfaebe8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d48c6f6762427ae"
              },
              {
                "subnet_id": "subnet-0fff1994d30444130"
              }
            ],
            "subnets": [
              "subnet-04d48c6f6762427ae",
              "subnet-0fff1994d30444130"
            ],
            "tags": {
              "Name": "cloudops-alb",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-alb",
              "Project": "cloudops"
            },
            "vpc_id": "vpc-066946a6de8f96012",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:loadbalancer/app/cloudops-alb/b5b96e2970bbab94"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:listener/app/cloudops-alb/b5b96e2970bbab94/57cfb1ebfff1fc2c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:targetgroup/cloudops-tg/4f491089adc7241d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091974775195:listener/app/cloudops-alb/b5b96e2970bbab94/57cfb1ebfff1fc2c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:loadbalancer/app/cloudops-alb/b5b96e2970bbab94",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:listener/app/cloudops-alb/b5b96e2970bbab94/57cfb1ebfff1fc2c"
          },
          "dependencies": [
            "aws_lb.cloudops",
            "aws_lb_target_group.cloudops",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cloudops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:targetgroup/cloudops-tg/4f491089adc7241d",
            "arn_suffix": "targetgroup/cloudops-tg/4f491089adc7241d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:091974775195:targetgroup/cloudops-tg/4f491089adc7241d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:091974775195:loadbalancer/app/cloudops-alb/b5b96e2970bbab94"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudops-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloudops-tg",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-tg",
              "Project": "cloudops"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:091974775195:targetgroup/cloudops-tg/4f491089adc7241d"
          },
          "dependencies": [
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:route-table/rtb-03bb4bd51f9f06580",
            "id": "rtb-03bb4bd51f9f06580",
            "owner_id": "091974775195",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1e7feef9864cfd0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudops-public-rt",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-public-rt",
              "Project": "cloudops"
            },
            "timeouts": null,
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "rtb-03bb4bd51f9f06580",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.cloudops",
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035db5cd9afe26d0a",
            "region": "us-east-1",
            "route_table_id": "rtb-03bb4bd51f9f06580",
            "subnet_id": "subnet-04d48c6f6762427ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "rtbassoc-035db5cd9afe26d0a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.cloudops",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbf73655f63b3ce3",
            "region": "us-east-1",
            "route_table_id": "rtb-03bb4bd51f9f06580",
            "subnet_id": "subnet-0fff1994d30444130"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "rtbassoc-0cbf73655f63b3ce3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.cloudops",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:security-group/sg-0162efbc39dfaebe8",
            "description": "Security group for CloudOps Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0162efbc39dfaebe8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudops-alb-sg",
            "name_prefix": "",
            "owner_id": "091974775195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudops-alb-sg",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-alb-sg",
              "Project": "cloudops"
            },
            "timeouts": null,
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "sg-0162efbc39dfaebe8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:security-group/sg-0e6b115475be6b9f8",
            "description": "Security group for CloudOps ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6b115475be6b9f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from the ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0162efbc39dfaebe8"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "cloudops-ecs-sg",
            "name_prefix": "",
            "owner_id": "091974775195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudops-ecs-sg",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-ecs-sg",
              "Project": "cloudops"
            },
            "timeouts": null,
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "sg-0e6b115475be6b9f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:subnet/subnet-04d48c6f6762427ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d48c6f6762427ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091974775195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudops-public-subnet",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-public-subnet",
              "Project": "cloudops"
            },
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "subnet-04d48c6f6762427ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:subnet/subnet-0fff1994d30444130",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fff1994d30444130",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091974775195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudops-public-subnet-b",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-public-subnet-b",
              "Project": "cloudops"
            },
            "vpc_id": "vpc-066946a6de8f96012"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "subnet-0fff1994d30444130",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091974775195:vpc/vpc-066946a6de8f96012",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05c881d009191efb0",
            "default_route_table_id": "rtb-0c7c155fb7544992e",
            "default_security_group_id": "sg-0dfb6b177c7b6cd4a",
            "dhcp_options_id": "dopt-00f9b6b035ba12091",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066946a6de8f96012",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7c155fb7544992e",
            "owner_id": "091974775195",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudops-vpc",
              "Project": "cloudops"
            },
            "tags_all": {
              "Name": "cloudops-vpc",
              "Project": "cloudops"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "091974775195",
            "id": "vpc-066946a6de8f96012",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}